hard-gists/4bbe165b19a2b0d457c6/run.log
=== Docker Run Log for 4bbe165b19a2b0d457c6 ===
Started at: Mi 29. Okt 15:08:09 CET 2025

[2025-10-29 15:08:09] START: Running container for 4bbe165b19a2b0d457c6
[2025-10-29 15:08:09] SUCCESS: Container 29fc0d6fccb14aa679769224bb1d2c303da6227d4defa1c8a229b62b6479cbe5 started for 4bbe165b19a2b0d457c6
=== Container logs for 4bbe165b19a2b0d457c6 ===
  File "/snippet.py", line 20
    print "Connected to SensorTag", my_sensor
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4bbe165b19a2b0d457c6 ===
[2025-10-29 15:08:11] INFO: Container 29fc0d6fccb14aa679769224bb1d2c303da6227d4defa1c8a229b62b6479cbe5 has stopped
